--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   provider: ^6.1.2
   image_picker: ^1.1.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
