--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   connectivity_plus: ^6.1.3
   internet_connection_checker: ^3.0.1
   cached_network_image: ^3.4.1
+  qr_flutter: ^4.1.0
+  google_sign_in: ^6.1.4
+  google_sign_in_web: ^0.12.0
+
 
 
 dev_dependencies:
