--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   google_sign_in: ^6.1.4
   google_sign_in_web: ^0.12.0
   flutter_svg: ^2.0.10
-
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
