--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,9 @@ dependencies:
   google_sign_in_web: ^0.12.0
   flutter_svg: ^2.0.10
   flutter_rating_bar: ^4.0.1
-
+  google_maps_flutter: ^2.12.1
+  location: ^8.0.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
