--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,12 @@ dependencies:
   flutter_svg: ^2.0.10
   flutter_rating_bar: ^4.0.1
   universal_html: ^2.2.4
+  flutter_map: ^8.1.1
+  location: ^8.0.0
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.1.0
+  geolocator: ^13.0.4
+  flutter_polyline_points: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
