--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,11 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^3.1.0
   geolocator: ^13.0.4
   flutter_polyline_points: ^2.1.0
+  flutter_spinkit: ^5.1.0
+  flutter_native_splash: ^2.2.8
+  flutter_dotenv: ^5.0.2
+  flutter_launcher_icons: ^0.10.0
+  flutter_cors: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
