--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   flutter_cors: ^1.0.1
   flutter_image_compress: ^2.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
