--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,9 @@ dependencies:
   flutter_cors: ^1.0.1
   flutter_image_compress: ^2.0.0
   local_auth: ^2.3.0
+  shimmer: ^2.0.0
+
+
 
 dev_dependencies:
   flutter_test:
