--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
-  intl: ^0.17.0
+  intl: ^0.19.0
   flutter_secure_storage: ^8.0.0
   provider: ^6.1.2
   image_picker: ^1.1.2
@@ -77,6 +77,7 @@ dependencies:
   local_auth: ^2.3.0
   shimmer: ^2.0.0
   socket_io_client: ^3.1.2
+  device_preview: ^1.2.0
 
 
 
